# CullingSystem

./: CMakeLists.txt  LICENSE  README.md
src/: bounding_volume_hierarchy.cpp  bounding_volume_hierarchy.hpp  frustum.cpp  frustum.hpp  frustum_manager.cpp  frustum_manager.hpp  main.cpp  shader_configurator.cpp
src/camera/: camera.cpp  camera.hpp
src/figures/: bounding_figures.cpp  bounding_figures.hpp  cube.cpp  cube.hpp  drawable.cpp  drawable.hpp
